[gd_scene load_steps=3 format=3 uid="uid://bj0etwt3su6di"]

[ext_resource type="Script" uid="uid://w6bibipp4po0" path="res://Calculators/CrossSectionalArea/cross_section.gd" id="1_7t7rm"]
[ext_resource type="Texture2D" uid="uid://dnswhwlkqm24a" path="res://Calculators/CalculatorBackground.png" id="1_r1gmq"]

[node name="CrossSection" type="Node2D"]
script = ExtResource("1_7t7rm")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_left = -128.0
offset_top = -128.0
offset_right = 320.0
offset_bottom = 128.0
texture = ExtResource("1_r1gmq")
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Constants" type="Node2D" parent="."]

[node name="Title" type="Label" parent="Constants"]
offset_left = -120.0
offset_top = -120.0
offset_right = 128.0
offset_bottom = -88.0
text = "Circle Area (Cross Sectional)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Helper" type="Label" parent="Constants"]
offset_left = -128.0
offset_top = -32.0
offset_right = -32.0
offset_bottom = 8.0
text = "Diameter"
horizontal_alignment = 2

[node name="Helper2" type="Label" parent="Constants"]
offset_left = 32.0
offset_top = -32.0
offset_right = 128.0
offset_bottom = 8.0
text = "Radius"

[node name="SideDisplay" type="RichTextLabel" parent="."]
offset_left = 96.0
offset_top = -104.0
offset_right = 304.0
offset_bottom = 112.0
focus_mode = 2
text = "Ensure that the correct Diameter / Radius is selected.

Keep track of your units."
vertical_alignment = 1
selection_enabled = true

[node name="Input" type="TextEdit" parent="."]
offset_left = -64.0
offset_top = -80.0
offset_right = 64.0
offset_bottom = -40.0
placeholder_text = "Diameter"

[node name="Calculate" type="Button" parent="."]
offset_left = -64.0
offset_right = 64.0
offset_bottom = 64.0
text = "Calculate"

[node name="Clear" type="Button" parent="."]
offset_left = -64.0
offset_top = 72.0
offset_right = 64.0
offset_bottom = 112.0
text = "Clear"

[node name="TypeToggle" type="CheckButton" parent="."]
offset_left = -24.0
offset_top = -32.0
offset_right = 20.0
offset_bottom = -8.0

[connection signal="text_changed" from="Input" to="." method="_on_input_text_changed"]
[connection signal="pressed" from="Calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="toggled" from="TypeToggle" to="." method="_on_type_toggle_toggled"]
